--- a/css/style.css
+++ b/css/style.css
@@ -1,29 +1,4 @@
-@font-face {
-  font-family: 'OpenSans';
-  src: url(/fonts/OpenSans-Regular.woff2) format('woff2'),
-    url(/fonts/OpenSans-Regular.woff) format('woff');
-    font-display: swap;
-    font-style: normal;
-    font-weight: 400;
-}
-
-@font-face {
-  font-family: 'OpenSans';
-  src: url(/fonts/OpenSans-SemiBold.woff2) format('woff2'),
-    url(/fonts/OpenSans-SemiBold.woff) format('woff');
-    font-display: swap;
-    font-style: normal;
-    font-weight: 600;
-}
-
-@font-face {
-  font-family: 'OpenSans';
-  src: url(/fonts/OpenSans-Bold.woff2) format('woff2'),
-    url(/fonts/OpenSans-Bold.woff) format('woff');
-    font-display: swap;
-    font-style: normal;
-    font-weight: 700;
-}
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap');
 
 :root {
   --color-white: #FFF;
@@ -64,7 +39,7 @@ body {
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  font-family: 'OpenSans', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   background-color: var(--color-white);
 }
 
@@ -102,7 +77,7 @@ img {
 
 .link, 
 .btn {
-  display: block;
+  display: inline-block;
   position: relative;
   z-index: 1;
   cursor: pointer;
@@ -613,15 +588,15 @@ h3 {
 }
 
 .hero__swiper-slide:nth-child(1) {
-  background-image: url(/img/hero-slide1.jpg);
+  background-image: url(/img/hero-slide1.webp);
 }
 
 .hero__swiper-slide:nth-child(2) {
-  background-image: url(/img/hero-slide2.jpg);
+  background-image: url(/img/hero-slide2.webp);
 }
 
 .hero__swiper-slide:nth-child(3) {
-  background-image: url(/img/hero-slide3.jpg);
+  background-image: url(/img/hero-slide3.webp);
 }
 
 .hero__container {
@@ -2147,15 +2122,15 @@ select {
   }
 
   .hero__swiper-slide:nth-child(1) {
-    background-image: url(/img/hero1024-slide1.jpg);
+    background-image: url(/img/hero1024-slide1.webp);
   }
   
   .hero__swiper-slide:nth-child(2) {
-    background-image: url(/img/hero1024-slide2.jpg);
+    background-image: url(/img/hero1024-slide2.webp);
   }
   
   .hero__swiper-slide:nth-child(3) {
-    background-image: url(/img/hero1024-slide3.jpg);
+    background-image: url(/img/hero1024-slide3.webp);
   }
 
   .hero__container {
@@ -2437,15 +2412,15 @@ select {
 
   /*hero*/
   .hero__swiper-slide:nth-child(1) {
-    background-image: url(/img/hero768-slide1.jpg);
+    background-image: url(/img/hero768-slide1.webp);
   }
   
   .hero__swiper-slide:nth-child(2) {
-    background-image: url(/img/hero768-slide2.jpg);
+    background-image: url(/img/hero768-slide2.webp);
   }
   
   .hero__swiper-slide:nth-child(3) {
-    background-image: url(/img/hero768-slide3.jpg);
+    background-image: url(/img/hero768-slide3.webp);
   }
 
   /*about*/
