--- a/css/style.css
+++ b/css/style.css
@@ -711,6 +711,7 @@ h3 {
 
 .gallery__modal-part.modal-active {
   display: flex;
+  overflow: scroll;
 }
 
 .gallery__modal-content {
@@ -1183,7 +1184,7 @@ select {
 
 .tab-content-item picture {
   width: 100%;
-  max-height: 470px;
+  height: 470px;
   margin-bottom: 30px;
 }
 
@@ -1281,6 +1282,10 @@ select {
   color: var(--color-royalPurple);
 }
 
+.accordion__btn:focus .accordion__title {
+  color: var(--color-white);
+}
+
 .accordion__btn svg {
   position: absolute;
   right: -7px;
@@ -1320,9 +1325,8 @@ select {
 
 .panel {
   flex-direction: row;
-  padding: 25px 0px 25px 5px;
+  padding: 25px 0px 40px 5px;
   overflow: hidden;
-  min-height: 338px;
   border-bottom: 1px solid var(--color-pastelGray);
 }
 
@@ -1448,6 +1452,7 @@ select {
 }
 
 .events__swiper-btn-prev, .events__swiper-btn-next {
+  position: relative;
   width: 50px;
   height: 50px;
   cursor: pointer;
@@ -1455,6 +1460,18 @@ select {
   border: none;
   background-color: var(--color-isabelline);
   transition: background-color .3s ease-in-out, border .3s ease-in-out;
+}
+
+.events__swiper-btn-next svg {
+  position: absolute;
+  top: 15px;
+  right: 17px;
+}
+
+.events__swiper-btn-prev svg {
+  position: absolute;
+  top: 15px;
+  left: 17px;
 }
 
 .events__swiper-btn-prev:hover:not(.sw-btn.swiper-button-disabled) {
@@ -1629,13 +1646,8 @@ select {
   transition: fill .3s ease-in-out;
 }
 
-.projects__text svg path:nth-child(2) {
-  transition: fill .3s ease-in-out;
-}
-
 .projects__text svg path:nth-last-child(-n+2) {
   fill: transparent;
-  transition: fill .3s ease-in-out;
 }
 
 .projects__text svg:hover path:first-child {
@@ -1658,11 +1670,11 @@ select {
   fill: var(--color-black);
 }
 
-.projects__text svg.active path:first-child {
+.projects__text svg:active path:first-child {
   fill: var(--color-ametist);
 }
 
-.projects__text svg.active path:nth-child(2) {
+.projects__text svg:active path:nth-child(2) {
   fill: var(--color-white);
 }
 
@@ -1671,16 +1683,18 @@ select {
 }
 
 .projects__text-link {
+  border: none;
   color: var(--color-ametist);
+  transition: color .3s ease-in-out;
 }
 
 .projects__text-link::before {
   content: "";
   position: absolute;
-  top: -6px;
-  bottom: -6px;
-  left: -6px;
-  right: -6px;
+  top: 2px;
+  bottom: 2px;
+  left: -3px;
+  right: -3px;
   background-color: var(--color-ametist);
   z-index: -1;
   opacity: 0;
@@ -1690,9 +1704,16 @@ select {
 .projects__text-link:focus-visible:before {
   opacity: 1;
 }
+
+.projects__text-link:focus-visible {
+  color: var(--color-white);
+}
+
 .projects__text-link:hover:not(:focus-visible) {
+
   border-bottom: 1px solid var(--color-ametist);
 }
+
 .projects__text-link:active:not(:focus-visible) {
   color: var(--color-royalPurple);
   border-bottom: 1px solid var(--color-royalPurple);
@@ -1764,6 +1785,14 @@ select {
   stroke: #BBB;
 }
 
+.projects__swiper-btn-prev.swiper-button-disabled {
+  cursor: not-allowed;
+}
+
+.projects__swiper-btn-next.swiper-button-disabled {
+  cursor: not-allowed;
+}
+
 .projecrs__swiper-wrapper {
   height: 150px;
 }
@@ -1771,24 +1800,55 @@ select {
 .projects__swiper-slide {
   display: flex;
   position: relative;
-  justify-content: center;
-  align-items: center;
   cursor: pointer;
   height: 100%;
-  border: 1px solid var(--color-pastelGray);
-  background-color: transparent;
+  border: 2px solid var(--color-pastelGray);
 }
 
-.projects__swiper-slide-img {
-  object-fit: contain;
-  object-position: center;
-  padding: 45px 0px;
+.slide-1::before, .slide-2::before, .slide-3::before, .slide-4::before, .slide-5::before, .slide-6::before, .slide-7::before, .slide-8::before, .slide-9::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   filter: grayscale(1);
   opacity: 30%;
+  background-repeat: no-repeat;
+  background-position: center;
   transition: filter .3s ease-in-out, opacity .3s ease-in-out;
 }
 
-.projects__swiper-slide:hover .projects__swiper-slide-img {
+.slide-1::before {
+  background-image: url(/img/projects-slide-1.webp);
+}
+
+.slide-2::before {
+  background-image: url(/img/projects-slide-2.webp);
+}
+.slide-3::before {
+  background-image: url(/img/projects-slide-3.webp);
+}
+.slide-4::before {
+  background-image: url(/img/projects-slide-4.webp);
+}
+.slide-5::before {
+  background-image: url(/img/projects-slide-5.webp);
+}
+.slide-6::before {
+  background-image: url(/img/projects-slide-6.webp);
+}
+.slide-7::before {
+  background-image: url(/img/projects-slide-7.webp);
+}
+.slide-8::before {
+  background-image: url(/img/projects-slide-8.webp);
+}
+.slide-9::before {
+  background-image: url(/img/projects-slide-9.webp);
+}
+
+.slide-1:hover::before, .slide-2:hover::before, .slide-3:hover::before, .slide-4:hover::before, .slide-5:hover::before, .slide-6:hover::before, .slide-7:hover::before, .slide-8:hover::before, .slide-9:hover::before {
   filter: grayscale(0);
   opacity: 100%;
 }
@@ -2063,10 +2123,6 @@ select {
     padding: 20px;
   }
 
-  .panel {
-    max-height: 350px;
-  }
-
   .panel__list-btn {
     font-size: 13px;
     line-height: 28px;
@@ -2172,7 +2228,7 @@ select {
     flex-direction: column;
     justify-content: start;
     position: absolute;
-    min-height: 768px;
+    height: 100vh;
     visibility: hidden;
     top: 0;
     left: 0;
@@ -2190,6 +2246,10 @@ select {
     visibility: visible;
     transform: translateX(0);
     opacity: 1;
+  }
+
+  .overflow {
+    overflow-y: hidden;
   }
 
   .header__nav-list {
@@ -2454,9 +2514,12 @@ select {
     width: 63px;
   }
 
+  .tab-content-item picture {
+    height: 274px;
+  }
+  
   .panel {
-    max-height: 435px;
-    height: auto;
+    padding-bottom: 2px;
   }
 
   .panel__list {
@@ -2577,9 +2640,8 @@ select {
     margin-left: 53px;
   }
 
-  .projects__swiper-slide-img {
-    padding: 0px;
-    max-width: 75%;
+  .projects__swiper-slide {
+    background-size: 80%;
   }
 
   /*contacts*/
@@ -2641,6 +2703,36 @@ select {
   
   .contacts__form-item {
     margin-bottom: 12px;
+  }
+  
+  .catalog__content {
+    flex-direction: column-reverse;
+  }
+
+  .catalog__left-part, .catalog__right-part {
+    width: 100%;
+  }
+
+  .catalog__left-part {
+    margin-right: 0px;
+  }
+
+  .catalog__right-part {
+    margin-bottom: 50px;
+  }
+
+  .panel__list {
+    columns: 3 auto;
+  }
+
+  .tab-content-item picture {
+    height: 419px;
+  }
+  
+  .tab-content-item picture img {
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
   }
 }
 
@@ -2796,22 +2888,6 @@ select {
     margin-bottom: 23px;
   }
 
-  .catalog__content {
-    flex-direction: column-reverse;
-  }
-
-  .catalog__left-part, .catalog__right-part {
-    width: 100%;
-  }
-
-  .catalog__left-part {
-    margin-right: 0px;
-  }
-
-  .catalog__right-part {
-    margin-bottom: 50px;
-  }
-
   .accordion__btn {
     padding: 0px;
   }
@@ -2822,8 +2898,7 @@ select {
   }
 
   .panel {
-    max-height: 500px;
-    padding: 25px 0px;
+    padding: 25px 0px 40px 0px;
   }
 
   .panel__list {
@@ -2831,11 +2906,13 @@ select {
   }
 
   .tab-content-item picture {
-    max-height: 419px;
+    height: 419px;
   }
 
   .tab-content-item picture img {
-    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    width: auto;
   }
 
   .tab-content-title {
@@ -2960,10 +3037,6 @@ select {
     padding-bottom: 50px;
   }
 
-  .gallery__modal-part.modal-active {
-    overflow: scroll;
-  }
-
   .gallery__modal-content {
     flex-direction: column;
     margin-right: 15px;
@@ -2982,7 +3055,7 @@ select {
   }
 
   .modal-content-right-close {
-    top: -140px;
+    top: -45%;
     right: 5px;
   }
 
@@ -3003,10 +3076,6 @@ select {
   .catalog__container {
     padding-top: 50px;
     padding-bottom: 25px;
-  }
-
-  .panel {
-    max-height: 500px;
   }
 
   .panel__list {
@@ -3113,8 +3182,6 @@ select {
   }
 
   .header__nav {
-    min-height: auto;
-    height: 100vh;
     padding: 15px 16px 27px 16px;
   }
 
@@ -3325,7 +3392,7 @@ select {
   }
 
   .tab-content-item picture {
-    max-height: 181px;
+    height: 181px;
     margin-bottom: 21px;
     object-fit: contain;
   }
