--- a/css/style.css
+++ b/css/style.css
@@ -371,6 +371,7 @@ h3 {
   font-size: 14px;
   line-height: 36px;
   background-color: var(--color-pink);
+  background-position: center;
   transition: border-color .3s ease-in-out, outline .3s ease-in-out;
 }
 
@@ -405,7 +406,6 @@ h3 {
   border-color: var(--color-brightUbe);
   backdrop-filter: linear-gradient(0deg, rgba(194, 131, 243, 0.4), rgba(194, 131, 243, 0.4));
 }
-
 
 .dropdown__tintoretto {
   background-image: url(/img/menu-tintoretto.webp);
@@ -589,6 +589,7 @@ h3 {
 
 .hero {
   position: relative;
+  overflow: hidden;
   margin-top: -170px;
   color: var(--color-white);
 }
@@ -605,6 +606,7 @@ h3 {
 .hero__swiper-slide {
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
 }
 
 .hero__swiper-slide:nth-child(1) {
@@ -692,6 +694,7 @@ h3 {
   min-height: 595px;
   background-image: url(/img/gallery-background.webp);
   background-size: cover;
+  background-position: center;
 }
 
 .gallery__modal-part {
@@ -717,7 +720,9 @@ h3 {
 .gallery__modal-content {
   position: relative;
   max-width: 900px;
-  min-height: 500px;
+  height: 100vh;
+  max-height: 500px;
+  overflow: auto;
   display: flex;
   flex-direction: row;
   box-shadow: 0px 0px 80px rgba(0, 0, 0, 0.8);
@@ -749,7 +754,7 @@ h3 {
   position: absolute;
   display: block;
   cursor: pointer;
-  right: 20px;
+  right: 10px;
   top: 20px;
   border: none;
   background-color: transparent;
@@ -813,8 +818,8 @@ h4 {
 
 select {
   -webkit-appearance: none;
-    -moz-appearance: none;
-    -webkit-tap-highlight-color: transparent;
+  -moz-appearance: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .gallery__select-heading {
@@ -2313,7 +2318,7 @@ select {
   }
 
   .header__form-input {
-    margin-right: 5px;
+    margin-right: 15px;
     max-width: 218px;
     width: 75%;
     border: 0px;
@@ -2447,7 +2452,7 @@ select {
 
   .gallery__modal-content {
     max-width: 594px;
-    min-height: 594px;
+    max-height: 594px;
   }
 
   .modal-content-right {
@@ -2772,7 +2777,7 @@ select {
   }
 
   .header__search-btn.active {
-    transform: translateX(-805%);
+    transform: translateX(-815%);
   }
 
   .header__search-form__active {
@@ -2783,15 +2788,15 @@ select {
 
   .header__form-input {
     position: relative;
-    left: 40px;
+    left: 27px;
     max-width: 576px;
     top: 35%;
   }
 
   .header__form-btn {
     position: relative;
-    top: 35%;
-    left: 45px;
+    top: 38%;
+    left: 5%;
   }
 
   /*hero*/
@@ -2866,10 +2871,6 @@ select {
 
   .gallery__right-part {
     width: 100%;
-  }
-
-  .modal-content-right-close {
-    top: 50px;
   }
 
   /*catalog*/
@@ -3057,7 +3058,7 @@ select {
     flex-direction: column;
     margin-right: 15px;
     margin-left: 15px;
-    min-height: 600px;
+    max-height: 600px;
   }
 
   .modal-content-left {
@@ -3071,7 +3072,7 @@ select {
   }
 
   .modal-content-right-close {
-    top: -45%;
+    top: -190px;
     right: 5px;
   }
 
@@ -3237,6 +3238,11 @@ select {
     height: 75px;
     left: 0px;
     z-index: 0;
+  }
+
+  .header__search-container {
+    right: 0px;
+    margin-left: 0px;
   }
 
   .header__search-btn {
@@ -3597,7 +3603,7 @@ select {
   }
 }
 
-@media (orientation: landscape) {
+@media (orientation: landscape) and (max-width: 500px) {
   .header__nav-close {
     margin-bottom: 10px;
   }
